# progInC

./: CMakeLists.txt  main.c  makeAbool.cpp  readme.md  sorting.c
ITS/: bitfields.cpp  variadic.cpp
ITS/Matrices/: .dynamics.h.swp  .scalar.c.swp  dynamics.h  q8.c  q_mul.c
ITS/Matrices/src/: .q8.c.swp  q8.c
ITS/Matrices/todo/: .todo.swp
msl/: mms.c
